[ui] fix z-index of custom navbar.

--- a/css/main.sass
+++ b/css/main.sass
@@ -46,7 +46,7 @@ body
 @media (max-width: $screen-xs-max)
     #leftbar
         position: fixed
-        z-index: 1
+        z-index: $zindex-navbar
 
 @media (min-width: $screen-sm-min)
     html, body, div.container
